--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cd src && ts-node ./test.ts",
+    "server": "ts-node ./src/srv.ts"
   },
   "author": "",
   "license": "ISC",
@@ -19,13 +20,17 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
+    "nodemon": "^2.0.15",
     "prettier-eslint": "^10.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.4",
     "vue-eslint-parser": "^7.1.1"
   },
   "dependencies": {
+    "bull-board": "^2.1.3",
+    "bullmq": "^1.52.1",
     "csv-parse": "^4.16.3",
+    "express": "^4.17.1",
     "objects-to-csv": "^1.3.6"
   }
 }
